--- a/awx/ui/package.json
+++ b/awx/ui/package.json
@@ -83,6 +83,7 @@
     "nightwatch": "^0.9.16",
     "node-object-hash": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "puppeteer": "^0.13.0",
     "time-grunt": "^1.4.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "uuid": "^3.1.0",
