Updates for running ui tests and linters

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands =
 deps =
     nodeenv
 commands =
+    make ui-devel
     npm run --prefix awx/ui jshint
     npm run --prefix awx/ui lint
 
@@ -55,4 +56,5 @@ commands =
 deps =
     nodeenv
 commands =
-    make UI_TEST_MODE=CI test-ui
+    make ui-devel
+    make ui-test-ci
