--- a/awx/ui/package.json
+++ b/awx/ui/package.json
@@ -23,7 +23,7 @@
     "pretest": "",
     "test": "karma start test/spec/karma.spec.js",
     "jshint": "grunt jshint:source --no-color",
-    "test:ci": "npm run test -- --single-run --reporter junit,dots --browsers=PhantomJS",
+    "test:ci": "npm run test -- --single-run --reporter junit,dots --browsers=chromeHeadless",
     "e2e": "./test/e2e/runner.js --config ./test/e2e/nightwatch.conf.js --suiteRetries=2",
     "unit": "karma start test/unit/karma.unit.js",
     "lint": "eslint .",
@@ -74,7 +74,6 @@
     "karma-html2js-preprocessor": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-junit-reporter": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
     "less": "^2.7.2",
@@ -86,7 +85,7 @@
     "nightwatch": "^0.9.19",
     "node-object-hash": "^1.3.0",
     "nunjucks": "^3.1.2",
-    "phantomjs-prebuilt": "^2.1.12",
+    "puppeteer": "^1.8.0",
     "time-grunt": "^1.4.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "uuid": "^3.1.0",
