--- a/awx/ui/test/e2e/cluster/docker-compose.yml
+++ b/awx/ui/test/e2e/cluster/docker-compose.yml
@@ -2,11 +2,11 @@
 version: '2'
 services:
   hub:
-    image: selenium/hub:3.8.1-erbium
+    image: selenium/hub:3.4.0-einsteinium
     ports:
       - 4444:4444
   chrome:
-    image: selenium/node-chrome:3.8.1-erbium
+    image: selenium/node-chrome:3.4.0-einsteinium
     # uncomment the two lines below to make tests watchable at vnc://localhost:secret@localhost:5900
     # image: selenium/node-chrome-debug
     # ports: ['5900:5900']
@@ -18,7 +18,8 @@ services:
       HUB_PORT_4444_TCP_ADDR: hub
       HUB_PORT_4444_TCP_PORT: 4444
   firefox:
-    image: selenium/node-firefox
+    image: selenium/node-firefox:3.4.0-einsteinium
+    ports: ['5900:5900']
     links:
       - hub
     environment:
@@ -30,7 +31,7 @@ services:
       context: ../../../../../
       dockerfile: awx/ui/test/e2e/cluster/Dockerfile
     depends_on:
-      - chrome
+      - firefox
     links:
       - hub
     volumes:
