--- a/awx/ui/.jshintrc
+++ b/awx/ui/.jshintrc
@@ -34,7 +34,8 @@
       "describe": false,
       "moment": false,
       "spyOn": false,
-      "jasmine": false
+      "jasmine": false,
+      "crypto": false
     },
     "strict": false,
     "quotmark": false,
